# chess-ex1-DevRamiz

./: .gitignore  CMakeLists.txt  main.cpp
include/: Bishop.hpp  Board.hpp  CMakeLists.txt  ChessExceptions.hpp  King.hpp  Knight.hpp  Move.hpp  MoveRecommender.hpp  MoveRecommender_helpers.hpp  Pawn.hpp  Piece.hpp  Position.hpp  PriorityQueue.hpp  Queen.hpp  Rook.hpp
src/: Bishop.cpp  Board.cpp  CMakeLists.txt  King.cpp  Knight.cpp  MoveRecommender.cpp  MoveRecommender_helpers.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp  main.cpp
tests/: CMakeLists.txt  PriorityQueueTests.cpp
